# bee

./: .gitignore  BEESPEC-v0.1.0.md  CMakeLists.txt  LICENSE  Makefile  README.md  array.c  array.h  array_test.c  bee.c  berr.c  berr.h  common.c  common.h  common_test.c  compiler.c  compiler.h  compiler_test.c  dynamic_array.c  dynamic_array.h  dynamic_array_test.c  error.c  error.h  error_test.c  errors.c  errors.h  errors_test.c  lexer.c  lexer.h  lexer_test.c  main.c  parser.c  parser.h  parser_binary_test.c  parser_call_test.c  parser_id_path_test.c  parser_lit_test.c  parser_primary_test.c  parser_stmts_test.c  parser_test.c  (+11 more)
cmake/: FetchCMocka.cmake
include/: bee.h
include/bee/: bee.h  compiler.h  parser.h  scope.h
src/: bee.c  compiler.c  main.c  parser.c  scope.c
test/: bee_test.cpp  bee_test.h  compiler_test.cpp  main.cpp  parser_test.cpp  scope_test.cpp
tests/: all_logical.bee  arithmetic_all.bee  arithmetic_parenthesis.bee  arithmetic_spaces.bee  bitw_all.bee  comp_all.bee  ineq_all.bee  logical_or.bee  runall.sh
